# tgclaude

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
systemd/: tgclaude.service
tests/: test_chunker.py  test_claude_bridge.py  test_delete.py  test_error_handler.py  test_formatter.py  test_image_processor.py  test_image_routing.py  test_model_effort.py  test_oauth_refresh.py  test_tables.py  test_telegram_utils.py  test_tool_result.py  test_usage_client.py
tgclaude/: __init__.py  auth.py  claude_bridge.py  config.py  db.py  image_processor.py  main.py  media.py  permissions.py  sessions.py  telegram_utils.py  usage_client.py
tgclaude/formatter/: __init__.py  ascii_detect.py  chunker.py  html_renderer.py  tables.py
tgclaude/handlers/: alerts.py  commands.py  messages.py  usage.py
